Fix weird spacing under footer

--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -7,7 +7,6 @@ $body-color: $gray-300;
 
 
 html, body {
-  height: 100%;
   color: $body-color;
 }
 
@@ -125,15 +124,13 @@ table td {
 
 #index-header {
   width: 100%;
-  height: calc(100% - 110px);
+  height: calc(100vh - #{$footer-height});
 }
 
 footer {
-  position: static;
-  bottom: 0;
   background-color: $black;
   width: 100%;
-  height: 110px;
+  height: $footer-height;
   color: lighten($black, 50);
 
   a {
