--- a/static/src/scss/variables.scss
+++ b/static/src/scss/variables.scss
@@ -1,2 +1,3 @@
 $primary: #E85537;
 $body-bg: #17181C;
+$footer-height: 110px;
